--- a/vitareact/public/index.html
+++ b/vitareact/public/index.html
@@ -42,4 +42,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script src="https://kit.fontawesome.com/625dded550.js" crossorigin="anonymous"></script>
 </html>
