--- a/vitareact/public/index.html
+++ b/vitareact/public/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" style="height: 100%; width: 100%"></div>
   </body>
   <script src="https://kit.fontawesome.com/625dded550.js" crossorigin="anonymous"></script>
   <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
